@@ -1,4 +1,8 @@
-﻿shmuel 01.11.2014 20:06:42 +0200 - build 443
+﻿shmuel 02.11.2014 00:52:08 +0200 - build 444
+
+1. LuaFAR: устранены 2 однотипных бага в обработке флагов типа userdata ("int64").
+
+shmuel 01.11.2014 20:06:42 +0200 - build 443
 
 1. LuaFAR: рефакторинг.
 
